--- a/_scss/3-default-components/_wave.scss
+++ b/_scss/3-default-components/_wave.scss
@@ -54,12 +54,6 @@
   }
 }
 
-@media screen and (max-height: 1024px) and (max-width: 1366px) {
-  .wave{
-    margin-top: 1040px;
-  }
-}
-
 @media screen and (max-height: 414px) and (max-width: 736px) {
   .wave {
     margin-top: 420px;
